# prerex

./: ChangeLog  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac  edit.c  inout.c  prerex.1  prerex.c  prerex.h  utils.c
debian/: changelog  control  copyright  gbp.conf  prerex.desktop  prerex.install  prerex.lintian-overrides  rules  watch
